--- a/meso.html
+++ b/meso.html
@@ -176,10 +176,10 @@
   <nav>
     <div class="logo">LokalniPlodovi</div>
     <ul>
-      <li><a href="index.html">Početna</a></li>
-      <li><a href="Prodavci.html">Svi prodavci</a></li>
-      <li><a href="#">Mapa</a></li>
-      <li><a href="#">Chat</a></li>
+      <li><a href="../../index.html">Početna</a></li>
+      <li><a href="../../Prodavci.html">Svi prodavci</a></li>
+      <li><a href="#">../../Mapa</a></li>
+      <li><a href="#">../../Chat</a></li>
 
       <!-- Prikazuje se SAMO ako je ulogovan -->
       <li id="moj-profil-li" style="display:none;">
@@ -191,10 +191,10 @@
 
       <!-- Prikazuje se SAMO ako NIJE ulogovan -->
       <li id="prijavi-se-li">
-        <a href="login.html">Prijavi se</a>
+        <a href="../../login.html">Prijavi se</a>
       </li>
       <li id="postani-prodavac-li">
-        <a href="registracija.html">Postani prodavac</a>
+        <a href="../../registracija.html">Postani prodavac</a>
       </li>
     </ul>
   </nav>
@@ -218,7 +218,7 @@
 
   function odjaviSe() {
     localStorage.removeItem('trenutniKorisnik');
-    window.location.href = 'index.html';
+    window.location.href = '../../index.html';
   }
 </script>
 
@@ -239,7 +239,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Sveže meso</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/meso/svezemeso.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -249,7 +249,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Pršuta</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/meso/prsuta.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -259,7 +259,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Čvarke</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/meso/cvarci.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -269,7 +269,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Kobasice</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/meso/kobasica.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -279,7 +279,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Kulen</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/meso/kulen.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -289,7 +289,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Slanina</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/meso/slanina.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -308,5 +308,6 @@
 </body>
 
 </html>
+
 
 
