--- a/med.html
+++ b/med.html
@@ -176,14 +176,14 @@
   <nav>
     <div class="logo">LokalniPlodovi</div>
     <ul>
-      <li><a href="index.html">Početna</a></li>
-      <li><a href="Prodavci.html">Svi prodavci</a></li>
-      <li><a href="#">Mapa</a></li>
-      <li><a href="#">Chat</a></li>
+      <li><a href="../../index.html">Početna</a></li>
+      <li><a href="../../Prodavci.html">Svi prodavci</a></li>
+      <li><a href="../../mapa.html">Mapa</a></li>
+      <li><a href="../../chat.html">Chat</a></li>
 
       <!-- Prikazuje se SAMO ako je ulogovan -->
       <li id="moj-profil-li" style="display:none;">
-        <a href="moj-profil.html">Moj profil</a>
+        <a href="../../moj-profil.html">Moj profil</a>
       </li>
       <li id="odjavi-se-li" style="display:none;">
         <a href="#" onclick="odjaviSe()">Odjavi se</a>
@@ -191,10 +191,10 @@
 
       <!-- Prikazuje se SAMO ako NIJE ulogovan -->
       <li id="prijavi-se-li">
-        <a href="login.html">Prijavi se</a>
+        <a href="../../login.html">Prijavi se</a>
       </li>
       <li id="postani-prodavac-li">
-        <a href="registracija.html">Postani prodavac</a>
+        <a href="../../registracija.html">Postani prodavac</a>
       </li>
     </ul>
   </nav>
@@ -218,7 +218,7 @@
 
   function odjaviSe() {
     localStorage.removeItem('trenutniKorisnik');
-    window.location.href = 'index.html';
+    window.location.href = '../../index.html';
   }
 </script>
 
@@ -239,7 +239,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Bagremov med</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/med/bagremov.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -249,7 +249,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Livadski med</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/med/livadski.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -259,7 +259,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Šumski med</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/med/sumski.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -269,7 +269,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Lipov med</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/med/lipov.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -279,7 +279,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Kestenov med</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/med/kestenov.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -289,7 +289,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Borov med</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/med/borov.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -299,7 +299,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Med sa saćem</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/med/sace.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -309,7 +309,7 @@
       </div>
       <div class="product-info">
         <h3 class="product-title">Propolis</h3>
-        <a href="#" class="btn">Pogledaj proizvođače</a>
+        <a href="proizvodjaci/med/propoli.html" class="btn">Pogledaj proizvođače</a>
       </div>
     </div>
 
@@ -328,5 +328,6 @@
 </body>
 
 </html>
+
 
 
