--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
     <ul>
       <li><a href="index.html">Početna</a></li>
       <li><a href="Prodavci.html">Svi prodavci</a></li>
-      <li><a href="#">Mapa</a></li>
-      <li><a href="#">Chat</a></li>
+      <li><a href="mapa.html">Mapa</a></li>
+      <li><a href="chat.html">Chat</a></li>
 
       <!-- Prikazuje se SAMO ako je ulogovan -->
       <li id="moj-profil-li" style="display:none;">
@@ -295,6 +295,7 @@
 </body>
 
 </html>
+
 
 
 
