--- a/chat.html
+++ b/chat.html
@@ -214,7 +214,7 @@
     <div class="messages" id="messages"></div>
     <div class="input-area">
       <input type="text" id="message-input" placeholder="Napiši poruku...">
-      <button id="send-btn">Pošalji</button>
+      <button onclick="sendMessage()">Pošalji</button>
     </div>
   </div>
 </div>
@@ -227,12 +227,12 @@
   </div>
 </footer>
 
-<!-- Firebase SDK (kompatibilna verzija bez module grešaka) -->
+<!-- Firebase compat SDK (radi bez module grešaka) -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
 <script>
-  // Zameni sa TVOJIM Firebase config-om
+  // Tvoj Firebase config (zameni sa pravim)
   const firebaseConfig = {
      apiKey: "AIzaSyDSgp20xhNEB2poyyxB1uEdsNsXGEzR9Vs",
   authDomain: "lokalni-plodovi.firebaseapp.com",
@@ -286,7 +286,7 @@
   }
 
   // Poveži dugme i Enter
-  document.getElementById('send-btn').onclick = sendMessage;
+  document.querySelector('button[onclick="sendMessage()"]').onclick = sendMessage;
   document.getElementById('message-input').addEventListener('keypress', function(e) {
     if (e.key === 'Enter') {
       e.preventDefault();
@@ -331,5 +331,6 @@
 
 </body>
 </html>
+
 
 
