--- a/chat.html
+++ b/chat.html
@@ -172,10 +172,10 @@
   <nav>
     <div class="logo">LokalniPlodovi</div>
     <ul>
-      <li><a href="/">Početna</a></li>
-      <li><a href="/prodavci">Svi prodavci</a></li>
-      <li><a href="/mapa">Mapa</a></li>
-      <li><a href="/chat">Chat</a></li>
+      <li><a href="index.html">Početna</a></li>
+      <li><a href="/Prodavci.html">Svi prodavci</a></li>
+      <li><a href="/mapa.html">Mapa</a></li>
+      <li><a href="/chat.html">Chat</a></li>
 
       <li id="moj-profil-li" style="display:none;">
         <a href="/moj-profil">Moj profil</a>
@@ -185,10 +185,10 @@
       </li>
 
       <li id="prijavi-se-li">
-        <a href="/login">Prijavi se</a>
+        <a href="/login.html">Prijavi se</a>
       </li>
       <li id="postani-prodavac-li">
-        <a href="/prijava-prodavca">Postani prodavac</a>
+        <a href="/registracija.html">Postani prodavac</a>
       </li>
     </ul>
   </nav>
@@ -331,6 +331,7 @@
 
 </body>
 </html>
+
 
 
 
