--- a/chat.html
+++ b/chat.html
@@ -173,22 +173,22 @@
     <div class="logo">LokalniPlodovi</div>
     <ul>
       <li><a href="index.html">Početna</a></li>
-      <li><a href="/Prodavci.html">Svi prodavci</a></li>
-      <li><a href="/mapa.html">Mapa</a></li>
-      <li><a href="/chat.html">Chat</a></li>
+      <li><a href="Prodavci.html">Svi prodavci</a></li>
+      <li><a href="mapa.html">Mapa</a></li>
+      <li><a href="chat.html">Chat</a></li>
 
       <li id="moj-profil-li" style="display:none;">
-        <a href="/moj-profil">Moj profil</a>
+        <a href="moj-profil.html">Moj profil</a>
       </li>
       <li id="odjavi-se-li" style="display:none;">
         <a href="#" onclick="odjaviSe()">Odjavi se</a>
       </li>
 
       <li id="prijavi-se-li">
-        <a href="/login.html">Prijavi se</a>
+        <a href="login.html">Prijavi se</a>
       </li>
       <li id="postani-prodavac-li">
-        <a href="/registracija.html">Postani prodavac</a>
+        <a href="registracija.html">Postani prodavac</a>
       </li>
     </ul>
   </nav>
@@ -344,6 +344,7 @@ s0.parentNode.insertBefore(s1,s0);
 
 </body>
 </html>
+
 
 
 
