--- a/registracija.html
+++ b/registracija.html
@@ -173,8 +173,8 @@
     <ul>
       <li><a href="index.html">Početna</a></li>
       <li><a href="Prodavci.html">Svi prodavci</a></li>
-      <li><a href="mapa.html">Mapa</a></li>
-      <li><a href="#">Chat</a></li>
+      <li><a href="mapa.html">mapa.html</a></li>
+      <li><a href="#">chat.html</a></li>
 
       <li id="moj-profil-li" style="display:none;">
         <a href="moj-profil.html">Moj profil</a>
@@ -313,5 +313,6 @@ s0.parentNode.insertBefore(s1,s0);
 
 </body>
 </html>
+
 
 
