--- a/proizvodjaci/tikvice.html
+++ b/proizvodjaci/tikvice.html
@@ -153,7 +153,21 @@
   document.getElementById('naslov').textContent = `Proizvođači ${prviVeliki}`;
   document.title = `Proizvođači ${prviVeliki} – LokalniPlodovi`;
 </script>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/698e1ba8b9112b1c35ea4530/1jh9ho3bh';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 
 </body>
 
 </html>
+
